# aiflow

./: .gitignore  README.md  aiflow.spec  desktop-build.sh  desktop-dev.sh  desktop-start.sh  desktop-test.sh  pyproject.toml  server-build.sh  server-dev.sh  server-start.sh  server-test.sh
.github/workflows/: build.yml
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: deployment.yaml
docs/: Build-App_zh.md
src/: __init__.py  app.py  main.py
src/agents/: __init__.py
src/api/: __init__.py  health.py  router.py
src/core/: __init__.py
src/desktop/: config.py  launcher.py
src/graph/: __init__.py
src/llms/: __init__.py
src/sys/dam/: __init__.py
src/sys/scrm/: __init__.py
src/tools/: READMR.md  __init__.py  bash.py  browser_user_tool.py  file_operators.py  planning.py  web_search.py
src/tools/search/: __init__.py  baidu_search.py  bing_search.py  duckduckgo_search.py  google_search.py
src/utils/: READMR.md  __init__.py
web/: .gitignore  LICENSE  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: main.tsx
web/src/app/: router.tsx
web/src/app/layout/: AppShell.tsx
web/src/app/pages/: Home.tsx
web/src/components/: EmptyState.tsx
web/src/config/locale/: index.ts
web/src/features/main/: AuraOrb.tsx  MainPanel.tsx  ModeSwitch.tsx  VoiceInput.tsx  WelcomeHero.tsx  WorkDirPicker.tsx
web/src/features/sidebar-left/: ChannelNav.tsx  ExtensionNav.tsx  LeftSidebar.tsx  NewTaskButton.tsx  QuickSettings.tsx  SettingsMenu.tsx  UserProfile.tsx
web/src/shared/providers/: language-provider.tsx  (+1 more)
(+2 files in other folders)
